--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Customer Segmentation</title>
     <style>
         body {
-            background-image: url("../static/images/background2.jpg");
+            background-image: url("../static/images/s1.jpg");
             background-size: cover;
             background-position: center;
             color: black;
